<resources>
    <string name="app_name">Comune</string>
    <string name="profile_button_content_description">Clique para exibir seu perfil</string>
    <string name="return_button_content_description">Clique para retornar ao modo de navegação normal.</string>
    <string name="descr_user_photo">Foto do usuário</string>
    <string name="notificacoes_button_text">notificações</string>
    <string name="msg_hello">Olá,</string>
    <string name="text_button_find">encontre</string>
    <string name="text_button_compare">compare</string>
    <string name="text_button_track_performance">acompanhe</string>
    <string name="text_button_reports">seus relatos</string>
    <string name="text_button_surveys">suas pesquisas</string>
    <string name="text_button_emergency">emergência</string>
    <string name="text_yes_button">sim</string>
    <string name="text_ok_button">ok</string>
    <string name="text_no_button">não</string>
    <string name="title_location_desabled">Localização desativada</string>
    <string name="msg_enable_phone_location">Foi detectado que a localização do seu aparelho está desativada, não sendo possível identificar sua posição no mapa pelo GPS ou rede móvel.\n\nDeseja alterar as configurações do dispositivo?</string>
    <string name="user_id_null">Ocorreu um erro na inicialização do Comune.</string>
    <string name="msg_location_not_found">Não foi possível verificar sua localização atual. Aguarde um instante...</string>
    <string name="gps_enabled">GPS habilitado</string>
    <string name="gps_disabled">GPS desabilitado</string>
    <string name="network_enabled">WiFi e rede móvel habilitadas</string>
    <string name="network_disabled">WiFi e rede móvel desabilitadas</string>
    <string name="direct_location_sources_settings">Redireciona para configurações de localização</string>
    <string name="marker_click_error">Não foi possível recuperar as informações deste local</string>
    <string name="status_local_aberto">aberto agora</string>
    <string name="status_local_fechado">fechado agora</string>
    <string name="texto_botao_opiniao">pesquisas disponíveis</string>
    <string name="texto_botao_sugestao">deixe um comentário</string>
    <string name="title_activity_survey_pager">Pesquisa</string>
    <string name="msg_user_too_far">Aproxime-se do prédio para poder opinar sobre o serviço deste estabelecimento ou para enviar um relato.</string>
    <string name="msg_question_position">Pergunta</string>
    <string name="msg_survey_download_complete">Pesquisa adicionada ao menu</string>
    <string name="msg_survey_completed_thankyou">Obrigado pela sua participação!</string>
    <string name="msg_survey_completed">Para concluir a pesquisa, clique no botão abaixo.</string>
    <string name="msg_survey_not_completed">Para concluir a pesquisa, entretanto, é obrigatório que todas as perguntas sejam respondidas.</string>
    <string name="msg_survey_alter_answers">Caso deseje, ainda é possível alterar suas respostas.</string>
    <string name="msg_survey_remaining_time_1">Prazo de</string>
    <string name="msg_survey_remaining_time_2">h para concluir a pesquisa</string>
    <string name="msg_number_of_question_1">Pesquisa composta por</string>
    <string name="msg_number_of_question_2">perguntas</string>
    <string name="text_button_complete_survey">Concluir</string>
    <string name="title_activity_survey_list">Lista de Pesquisas Disponíveis</string>
    <string name="new_survey_available">Nova pesquisa</string>
    <string name="msg_survey_available_since">Disponível desde</string>
    <string name="msg_survey_started_on">Iniciada em</string>
    <string name="msg_start_survey">Começar</string>
    <string name="msg_resume_survey">Continuar</string>
    <string name="msg_finish_survey">Concluir</string>
    <string name="title_activity_report">Relato</string>
    <string name="report_text">Deixe aqui sua sugestão ou reclamação</string>
    <string name="button_send_report">Enviar</string>
    <string name="msg_null_comment">Por favor, deixe um comentário!</string>
    <string name="msg_no_activity_capture_image">Instale em seu aparelho um app capaz de tirar fotos!</string>
    <string name="msg_no_activity_capture_video">Instale em seu aparelho um app capaz de gravar vídeos!</string>
    <string name="hint_report_comment">Em que podemos melhorar?\n\nEscreva um comentário aqui! Você pode fazer sugestões, elogios ou reclamações.</string>
    <string name="sunday">Domingo</string>
    <string name="monday">Segunda</string>
    <string name="tuesday">Terça</string>
    <string name="wednesday">Quarta</string>
    <string name="thursday">Quinta</string>
    <string name="friday">Sexta</string>
    <string name="saturday">Sábado</string>
    <string name="january">Janeiro</string>
    <string name="february">Fevereiro</string>
    <string name="march">Março</string>
    <string name="april">Abril</string>
    <string name="may">Maio</string>
    <string name="june">Junho</string>
    <string name="july">Julho</string>
    <string name="august">Agosto</string>
    <string name="september">Setembro</string>
    <string name="october">Outubro</string>
    <string name="november">Novembro</string>
    <string name="december">Dezembro</string>
    <string name="text_visualize">Instituições sendo visualizadas:</string>
    <string name="text_layer_education">Educação</string>
    <string name="text_layer_security">Segurança</string>
    <string name="text_layer_health">Saúde</string>
    <string name="text_layer_high_grade"> 4.0 — 5.0 </string>
    <string name="text_layer_medium_grade"> 3.0 — 3.9 </string>
    <string name="text_layer_low_grade"> 0.0 — 2.9 </string>
    <string name="title_activity_main">comune</string>
    <string name="title_activity_login">comune</string>
    <string name="text_button_login">Entrar</string>
    <string name="text_button_logout">Sair</string>
    <string name="hint_user_email">e-mail</string>
    <string name="hint_user_password">senha</string>
    <string name="text_button_go_to_register">ainda não tem uma conta?</string>
    <string name="msg_user_register_sucess">Usuário cadastrado com sucesso!</string>
    <string name="description_comune_logo">Logotipo do aplicativo Comune.</string>
    <string name="msg_wait">Por favor, aguarde...</string>
    <string name="msg_authenticating">Autenticando usuário</string>
    <string name="msg_registering">Registrando novo usuário</string>
    <string name="msg_exit_register_activity">Ao sair desta atividade, todos os dados informados serão perdidos.</string>
    <string name="msg_exit_report_activity">Ao sair desta atividade, seu comentário e possíveis arquivos anexados serão perdidos.</string>
    <string name="msg_logout">Deseja sair do aplicativo?</string>
    <string name="msg_empty_login_fields">Por favor, preencha os campos \'E-mail\' e \'Senha\'.</string>
    <string name="msg_empty_form_field">Por favor, preencha este campo.</string>
    <string name="msg_empty_area_code_field">Atenção, o DDD deve ter 2 dígitos.</string>
    <string name="msg_empty_phone_number_field">Atenção, o telefone deve ter pelo menos 8 dígitos.</string>
    <string name="msg_invalide_date">Por favor, insira uma data válida.</string>
    <string name="msg_incorrect_login_info">Por favor, verifique os dados informados.</string>
    <string name="msg_incorrect_registration_info">E-mail já utilizado por uma conta</string>
    <string name="msg_network_non_available">Não foi possível se conectar à Internet</string>
    <string name="msg_on_server_error">Ocorreu um erro. Por favor, tente novamente mais tarde.</string>
    <string name="msg_passwords_dont_match">As senhas informadas não coincidem.</string>
    <string name="msg_invalid_email_address">Endereço de e-mail inválido.</string>
    <string name="title_activity_register">comune</string>
    <string name="hint_user_first_name">Nome</string>
    <string name="hint_user_last_name">Sobrenome</string>
    <string name="text_user_phone_number">Telefone</string>
    <string name="text_user_birthday">Data de Nascimento</string>
    <string name="hint_user_password_repeated">confirme a senha</string>
    <string name="text_button_register">OK</string>
    <string name="text_button_return">voltar</string>
    <string name="text_button_continue">continuar</string>
    <string name="text_button_cancel">cancelar</string>
    <string name="text_button_conclude">Concluir</string>
    <string name="text_button_jump">pular</string>
    <string name="hint_bday_day">dd</string>
    <string name="hint_bday_month">mm</string>
    <string name="hint_bday_year">aaaa</string>
    <string name="hint_area_code">DDD</string>
    <string name="hint_phone_number">Telefone</string>
    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
    <string name="title_activity_user_reports">Lista de Estabelecimentos</string>
    <string name="title_activity_report_list_for_institutions">Lista de Relatos</string>
    <string name="msg_header_institutions_report_list">Estabelecimentos para as quais você já enviou algum relato:</string>
    <string name="msg_header_institutions_survey_list">Estabelecimentos para as quais você tem pesquisas a completar:</string>
    <string name="msg_empty_list">Você ainda não enviou sugestões, críticas e/ou elogios para nenhuma instituição.</string>
    <string name="msg_error_loading_list">Não foi possível carregar as informações no momento</string>
    <string name="msg_error_empty_survey_list_loaded">Não há pesquisas incompletas</string>
    <string name="msg_error_empty_report_list_loaded">Você ainda não enviou nenhum relato</string>
    <string name="msg_report_made_at">Feito às</string>
    <string name="msg_report_submitted">relato enviado</string>
    <string name="msg_reports_submitted">relatos enviados</string>
    <string name="msg_report">relato</string>
    <string name="msg_reports">relatos</string>
    <string name="msg_header_user_reports_list">Abaixo estão listadas as sugestões, reclamações e elogios feitos por você para este estabelecimento:</string>
    <string name="title_activity_display_report">Relato</string>
    <string name="title_activity_display_report_response">Resposta</string>
    <string name="report_photo_description">Foto associada ao relato.</string>
    <string name="text_report">Relato</string>
    <string name="text_sent_date">Enviado em</string>
    <string name="text_response">Resposta</string>
    <string name="title_activity_emergency">Emergência</string>
    <string name="textview_location_address_text">Sua localização aproximada</string>
    <string name="button_call_police_text">Polícia</string>
    <string name="button_call_fire_department_text">Bombeiros</string>
    <string name="button_call_ambulance_text">Ambulância</string>
    <string name="service_not_available">O serviço de geocodificação está indisponível no momento.</string>
    <string name="invalid_lat_long_used">Os valores informados para latitude e longitude são inválidos.</string>
    <string name="no_address_found">O geocodficador não pode encontrar um endereço para a latitude e a longitude informados.</string>
    <string name="address_found">Endereço encontrado.</string>
    <string name="no_geocoder_available">O serviço de geocodificação não está disponível, devido a um erro na rede ou a uma exceção de IO.</string>
    <string name="title_activity_find_places">Encontre</string>
    <string name="msg_activity_find_places">Encontre serviços públicos próximos a você</string>
    <string name="button_find_plces_text">Buscar</string>
    <string name="button_lower_grades_descr">Busca estabelecimentos com as menores médias.</string>
</resources>