<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:orientation="vertical"
            tools:context="williamgbranco.comune.activity.MapLayersFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="19sp"
        android:textStyle="bold"
        android:text="@string/text_visualize"
        android:layout_gravity="top"/>
    <!--android:textColor="@android:color/black"-->

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_education_black"/>

        <CheckBox
            android:id="@+id/checkbox_education_layer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/text_layer_education"/>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_health_black"/>
        <CheckBox
            android:id="@+id/checkbox_health_layer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/text_layer_health"/>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_security_black"/>

        <CheckBox
            android:id="@+id/checkbox_security_layer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/text_layer_security"/>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_gravity="bottom"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@android:color/darker_gray"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_mark_green"/>

        <CheckBox
            android:id="@+id/checkbox_high_grade_layer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/text_layer_high_grade"/>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_mark_yellow"/>

        <CheckBox
            android:id="@+id/checkbox_medium_grade_layer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/text_layer_medium_grade"/>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_mark_red"/>

        <CheckBox
            android:id="@+id/checkbox_low_grade_layer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/text_layer_low_grade"/>
    </LinearLayout>


    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp"/>

</LinearLayout>
