<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="20dp"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <ImageView
                    android:id="@+id/user_picture"
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:gravity="top|left"
                    android:padding="4dp"
                    android:src="@drawable/photo_placeholder"
                    android:contentDescription="@string/descr_user_photo"/>
                <!--android:background="@drawable/imageview_profile_photo"-->
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:gravity="center">
                <ProgressBar
                    android:id="@+id/progress_bar"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:progress="50"
                    android:indeterminate="false"
                    android:visibility="invisible"/>
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:layout_gravity="start|top"
            android:orientation="vertical"
            android:paddingTop="20dp"
            android:paddingLeft="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/msg_hello"
                android:textSize="18sp"
                android:textStyle="italic"/>

            <TextView
                android:id="@+id/textview_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <Button
                android:id="@+id/button_find"
                android:text="@string/text_button_find"
                style="@style/profile_screen_buttons"
                />

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/button_surveys"
                android:text="@string/text_button_surveys"
                style="@style/profile_screen_buttons"
                />

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/button_reports"
                android:text="@string/text_button_reports"
                style="@style/profile_screen_buttons"
                />

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/button_emergency"
                android:text="@string/text_button_emergency"
                style="@style/profile_screen_buttons"
                />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp"/>

        <!--Logout button-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1.5"/>

            <Button
                android:id="@+id/button_logout"
                android:layout_height="40dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:text="@string/text_button_logout"
                />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
