<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
              android:background="@android:color/white"
             tools:context="williamgbranco.comune.activity.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">
        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:alpha="0.7"
            android:gravity="center"
            android:contentDescription="@string/description_comune_logo"
            android:src="@drawable/ic_comune_logo_orange"/>

        <LinearLayout
            android:id="@+id/container_progress_bar"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:visibility="gone">
            <ProgressBar
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:max="100"
                android:progress="50"/>
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="top|center_horizontal">

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp"/>

        <EditText
            android:id="@+id/edittext_user_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_user_email"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:layout_margin="30dp"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <EditText
            android:id="@+id/edittext_user_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_user_password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:layout_margin="30dp"/>
        
        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp"/>
        
        <Button
            android:id="@+id/button_login"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:minWidth="250dp"
            android:text="@string/text_button_login"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="top|center_horizontal">

            <View
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="top|center_horizontal">
            <Button
                android:id="@+id/button_register"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:minWidth="250dp"
                android:textAllCaps="false"
                android:text="@string/text_button_go_to_register"/>
        </LinearLayout>


    </LinearLayout>

</LinearLayout>
