<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
              android:padding="10dp"
             tools:context="williamgbranco.comune.activity.EmergencyFragment">

    <include layout="@layout/fragment_header_text"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="0dp"
            android:layout_weight="1">

            <!--<TextView
                android:text="@string/textview_location_address_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:textSize="20sp"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp"/>-->

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:paddingLeft="10dp">

                <TextView
                    android:id="@+id/textview_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:textSize="20sp"
                    android:textColor="@android:color/black"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">
                    
                    <ProgressBar
                        android:id="@+id/progress_bar_address"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:max="100"
                        android:progress="50"
                        android:visibility="invisible"/>
                    
                </LinearLayout>
                
            </RelativeLayout>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"/>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="0dp"
            android:layout_weight="1.5">

            <Button
                android:id="@+id/button_call_police"
                android:text="@string/button_call_police_text"
                android:layout_width="match_parent"
                android:drawableLeft="@drawable/ic_police_gray"
                android:layout_height="50dp"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/button_call_fire_department"
                android:text="@string/button_call_fire_department_text"
                android:layout_width="match_parent"
                android:drawableLeft="@drawable/ic_fireman_gray"
                android:layout_height="50dp"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/button_call_ambulance"
                android:text="@string/button_call_ambulance_text"
                android:layout_width="match_parent"
                android:drawableLeft="@drawable/ic_ambulance_gray"
                android:layout_height="50dp"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"/>

        </LinearLayout>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="40dp"/>

</LinearLayout>
